--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<link rel="icon" href="favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Alex Westerman's Portfolio</title>
+		<link rel="stylesheet" href="src/index.css"/>
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto" />
 	</head>
 	<body>
